--- a/blog.html
+++ b/blog.html
@@ -34,15 +34,15 @@
   </nav>
   <div class="section">
     <div class="container header">
-      <a href="index.html">Return to homepage</a>
+      <a href="index.html">← Homepage</a>
       <h1>Blog Posts</h1>
   </div>
   <div class="section">
     <div class="container">
       <h2>November</h2>
       <ul>
-        <li><a href="https://safenetconsulting.com/blog/use-personas-to-build-empathy-for-your-end-user/">Use personas to build empathy for your end user</a></li>
-        <li><a href="https://medium.com/that-conference/the-why-and-how-of-screen-reader-testing-8a92add2a609">The why and how of getting started with screen reader testing</a></li>
+        <li><a href="https://safenetconsulting.com/blog/use-personas-to-build-empathy-for-your-end-user/">Use Personas to Build Empathy For Your End User</a></li>
+        <li><a href="https://medium.com/that-conference/the-why-and-how-of-screen-reader-testing-8a92add2a609">The Why and How of Getting Started with Screen Reader Testing</a></li>
       </ul>
     </div>
   </div>
@@ -50,8 +50,8 @@
     <div class="container">
       <h2>October</h2>
       <ul>
-        <li><a href="https://safenetconsulting.com/blog/should-you-invest-in-building-a-chatbot/">Should you invest in building a chatbot?</a></li>
-        <li><a href="https://medium.com/@ashleydzick/go-home-or-go-remote-usability-testing-anywhere-b627ebf286c5">Go home or go remote: usability testing anywhere</a></li>
+        <li><a href="https://safenetconsulting.com/blog/should-you-invest-in-building-a-chatbot/">Should You Invest in Building a Chatbot?</a></li>
+        <li><a href="https://medium.com/@ashleydzick/go-home-or-go-remote-usability-testing-anywhere-b627ebf286c5">Go Home or Go Remote: Usability Testing Anywhere</a></li>
       </ul>
     </div>
   </div>
@@ -59,7 +59,7 @@
     <div class="container">
       <h2>September</h2>
       <ul>
-        <li><a href="https://safenetconsulting.com/blog/essential-content-strategy-for-great-ux/">Essential content strategy for great UX</a></li>
+        <li><a href="https://safenetconsulting.com/blog/essential-content-strategy-for-great-ux/">Essential Content Strategy for Great UX</a></li>
       </ul>
     </div>
   </div>
@@ -67,7 +67,7 @@
     <div class="container">
       <h2>August</h2>
       <ul>
-        <li><a href="https://safenetconsulting.com/blog/the-roi-of-a-well-crafted-user-experience/">The ROI of a well-crafted user experience</a></li>
+        <li><a href="https://safenetconsulting.com/blog/the-roi-of-a-well-crafted-user-experience/">The ROI of a Well-Crafted User Experience</a></li>
       </ul>
     </div>
   </div>
@@ -75,7 +75,7 @@
     <div class="container">
       <h2>July</h2>
       <ul>
-        <li><a href="https://safenetconsulting.com/blog/the-three-industries-most-vulnerable-to-accessibility-lawsuits/">The three industries most vulnerable to accessibility lawsuits</a></li>
+        <li><a href="https://safenetconsulting.com/blog/the-three-industries-most-vulnerable-to-accessibility-lawsuits/">The Three Industries Most Vulnerable to Accessibility Lawsuits</a></li>
       </ul>
     </div>
   </div>
@@ -83,9 +83,9 @@
     <div class="container">
       <h2>March</h2>
       <ul>
-        <li><a href="https://medium.com/@ashleydzick/always-be-asking-what-to-test-and-when-6b4561c10b21">Alwaus be asking: what to test and when</a></li>
-        <li><a href="https://safenetconsulting.com/blog/5-quick-ways-improve-products-accessibility/">5 quick ways to improve your product's accessibility</a></li>
-        <li><a href="https://medium.com/@ashleydzick/basic-usability-testing-for-developers-ballin-on-a-budget-of-0-398b81356cef">Basic usability testing for developers ballin' on a budget of $0</a></li>
+        <li><a href="https://medium.com/@ashleydzick/always-be-asking-what-to-test-and-when-6b4561c10b21">Always Be Asking: What to Test and When</a></li>
+        <li><a href="https://safenetconsulting.com/blog/5-quick-ways-improve-products-accessibility/">5 Quick Ways to Improve Your Product's Accessibility</a></li>
+        <li><a href="https://medium.com/@ashleydzick/basic-usability-testing-for-developers-ballin-on-a-budget-of-0-398b81356cef">Basic Usability Testing for Developers Ballin' on a Budget of $0</a></li>
       </ul>
     </div>
   </div>
