--- a/index.html
+++ b/index.html
@@ -42,29 +42,30 @@
   </div>
   <div class="section">
     <div class="container">
-      <h3>recent + upcoming events</h3>
+      <h3>Recent + Upcoming Events</h3>
       <ul>
-        <li><a href="https://www.eventbrite.com/e/meet-the-meetups-ii-mkes-largest-tech-meetup-tickets-50038918753">Solving What to Solve: UX + Machine Learning</a></li>
+        <li><a href="https://www.eventbrite.com/e/meet-the-meetups-ii-mkes-largest-tech-meetup-tickets-50038918753">Solving What to Solve: UX + Machine Learning</a>
+            &nbsp;&nbsp;<a href="https://speakerdeck.com/ashleydzick/solving-what-to-solve-ux-plus-machine-learning">[Slides]</a></li>
         <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a>
             &nbsp;&nbsp;<a href="https://drive.google.com/file/d/1oLRlg0Jel88FW_vuRC1ARQTD6mAhKsbg/view">[Slides]</a>
         </li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
       </ul>
-      <h3>featured blog posts</h3>
+      <h3>Featured Blog Posts</h3>
       <ul>
-        <li><a href="https://medium.com/@ashleydzick/go-home-or-go-remote-usability-testing-anywhere-b627ebf286c5">Go Home or Go Remote, Usability Testing Anywhere</a></li>
-        <li><a href="https://safenetconsulting.com/blog/essential-content-strategy-for-great-ux/">Essential Content Strategy for Great UX</a></li>
+        <li><a href="https://safenetconsulting.com/blog/use-personas-to-build-empathy-for-your-end-user/">Use Personas to Build Empathy For Your End User</a></li>
+        <li><a href="https://medium.com/that-conference/the-why-and-how-of-screen-reader-testing-8a92add2a609">The Why and How of Getting Started with Screen Reader Testing</a></li>
         <li><a href="https://safenetconsulting.com/blog/the-roi-of-a-well-crafted-user-experience/">The ROI of a Well-Crafted User Experience</a></li>
       </ul>
-      <a href="blog.html">view all blog posts</a>
+      <a href="blog.html">All Blog Posts →</a>
     </div>
   </div>
 
   <div class="section">
     <div class="container">
       <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
-      <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/tw.svg" alt="twitter"/></a>
-      <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/ln.svg" alt="LinkedIn"/></a>
+      <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/tw.svg" alt="tw"/></a>
+      <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/ln.svg" alt="LI"/></a>
       <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="Medium" src="images/mm.svg" alt="Medium"/></a>
       
     </div>
