--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
       </ul>
+      <a href="events.html">Recent Events →</a>
       <h3>Featured Blog Posts</h3>
       <ul>
         <li><a href="https://safenetconsulting.com/blog/use-personas-to-build-empathy-for-your-end-user/">Use Personas to Build Empathy For Your End User</a></li>
