--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,14 @@
   </div>
   <div class="section">
     <div class="container">
+      <h2>December</h2>
+      <ul>
+        <li><a href="https://safenetconsulting.com/blog/building-your-bot-personality/">Building Your Bot Personality</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
       <h2>November</h2>
       <ul>
         <li><a href="https://safenetconsulting.com/blog/use-personas-to-build-empathy-for-your-end-user/">Use Personas to Build Empathy For Your End User</a></li>
